# genesis

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  test_attack_bug.json  test_bug.json
.github/workflows/: rust.yml
assets/config/: genesis.toml
config/: genesis.toml
crates/genesis-brain/: Cargo.toml
crates/genesis-brain/src/: activation.rs  brain_error.rs  graph.rs  lib.rs  neuron.rs  synapse.rs
crates/genesis-genome/: Cargo.toml
crates/genesis-genome/src/: chromosome.rs  genome_error.rs  lib.rs
crates/genesis-lib/: Cargo.toml
crates/genesis-lib/src/: ecosystem.rs  lib.rs  mind.rs  spawning.rs
crates/genesis-lib/src/behaviour/: growth.rs  lifecycle.rs  thinking.rs
crates/genesis-lib/src/config/: mod.rs
crates/genesis-math/: Cargo.toml
crates/genesis-math/src/: lib.rs  math_error.rs
crates/genesis-util/: Cargo.toml
crates/genesis-util/src/: color.rs  lib.rs  maths.rs  probability.rs  util_error.rs  weight.rs
crates/genesis_attributes/: Cargo.toml
crates/genesis_attributes/src/: lib.rs
crates/genesis_body/: Cargo.toml
crates/genesis_brain/: Cargo.toml
crates/genesis_brain/src/: activation.rs  brain_error.rs  graph.rs  lib.rs  neuron.rs  synapse.rs
crates/genesis_color/: Cargo.toml
crates/genesis_color/src/: lib.rs
crates/genesis_components/: Cargo.toml
crates/genesis_components/src/: body.rs  eat.rs  grab.rs  grow.rs  lay.rs  lib.rs  mind.rs  see.rs  time.rs
crates/genesis_config/: Cargo.toml
crates/genesis_config/src/: attr_config.rs  lib.rs  validators.rs
crates/genesis_derive/: Cargo.toml
crates/genesis_derive/src/: lib.rs
crates/genesis_ecosystem/: Cargo.toml
crates/genesis_ecosystem/src/: lib.rs
crates/genesis_genome/: Cargo.toml
crates/genesis_genome/src/: chromosome.rs  lib.rs
crates/genesis_lib/: Cargo.toml
crates/genesis_lib/config/: genesis.toml
crates/genesis_lib/src/: ancestors.rs  attributes.rs  body.rs  bug_serde.rs  conditions.rs  genesis_serde.rs  lib.rs  lifecycle.rs  mind.rs  setup.rs  simulation.rs  spawning.rs  statistics.rs
crates/genesis_lib/src/behaviour/: attacking.rs  eating.rs  grabbing.rs  growing.rs  growth.rs  laying.rs  lifecycle.rs  metabolism.rs  mod.rs  moving.rs  seeing.rs  sight.rs  thinking.rs  timing.rs
crates/genesis_lib/src/config/: mod.rs
crates/genesis_lib/src/ui/: brain_panel.rs  gui.rs  info_panels.rs  interaction.rs  menus.rs  mod.rs  statistics.rs
crates/genesis_macros/: Cargo.toml
crates/genesis_macros/src/: lib.rs
crates/genesis_maths/: Cargo.toml
crates/genesis_maths/src/: lib.rs
crates/genesis_newtype/: Cargo.toml
crates/genesis_newtype/src/: lib.rs
crates/genesis_spawners/: Cargo.toml
crates/genesis_spawners/src/: lib.rs
crates/genesis_traits/: Cargo.toml
crates/genesis_traits/src/: lib.rs
crates/genesis_util/: Cargo.toml
crates/genesis_util/src/: lib.rs  probability.rs  util_error.rs
crates/spawners/: Cargo.toml
genesis_game/: Cargo.toml
genesis_game/src/: main.rs
notes/: adding_attributes.md  saving_sim.md
planning/: brain.md  top_level.md
src/: activation.rs  ancestors.rs  attributes.rs  body.rs  config.rs  ecosystem.rs  errors.rs  food.rs  interaction.rs  lib.rs  lifecycle.rs  mind.rs  movement.rs  physics.rs  probability.rs  setup.rs  sight.rs  spawn.rs  spawning.rs  systems.rs  ui.rs  weight.rs
src/behaviour/: eating.rs  growth.rs  lifecycle.rs  metabolism.rs  mod.rs  movement.rs  sight.rs  spawning.rs  thinking.rs  timers.rs
src/brain/: errors.rs  graph.rs  mod.rs  neuron.rs  synapse.rs
src/components/: body.rs  mod.rs
src/config/: attr_config.rs  mod.rs  validators.rs
src/genome/: chromosome.rs  mod.rs
src/setup/: mod.rs
src/spawning/: mod.rs
src/systems/: interaction.rs  mod.rs  movement.rs  thinking.rs
src/ui/: brain_panel.rs  gui.rs  interaction.rs  mod.rs  statistics.rs
