[workspace]
resolver = "2"
members = [
    "crates/*",
    "genesis_game"
]

[workspace.dependencies]
genesis_attributes = { path = "./crates/genesis_attributes" }
genesis_brain = { path = "./crates/genesis_brain" }
genesis_color = { path = "./crates/genesis_color/"}
genesis_components = { path = "./crates/genesis_components/"}
genesis_config = { path = "./crates/genesis_config" }
genesis_ecosystem = { path = "./crates/genesis_ecosystem" }
genesis_lib = { path = "./crates/genesis_lib" }
genesis_maths = {path = "./crates/genesis_maths/"}
genesis_newtype = { path = "./crates/genesis_newtype/"}
genesis_spawners = { path = "./crates/genesis_spawners" }
genesis_derive = { path = "./crates/genesis_derive" }
genesis_macros = { path = "./crates/genesis_macros" }
genesis_traits = { path = "./crates/genesis_traits" }
bevy = {version = "0.9.1", features = ["serialize"] }
bevy_ecs = "0.9.1"
bevy_app = "0.9.1"
bevy_render = "0.9.1"
bevy_reflect = "0.9.1"
bevy_time = "0.9.1"
bevy_core_pipeline = "0.9.1"
bevy_egui = "0.18.0"
bevy_rapier2d = {version = "0.19.0", features = ["debug-render", "serde-serialize"]}
iyes_loopless = {version="0.9.1", features = ["fixedtimestep"]}
bevy-trait-query = "0.1.0"
bevy_screen_diagnostics = "0.1.1"
derive_more = "0.99.17"
derive-getters = "0.2.0"
anyhow = "1.0.68"
thiserror = "1.0.38"
serde_derive = "1.0.147"
serde = "1.0.152"
serde_json = "1.0.91"
ron = "0.8"
rand = "0.8.5"
rand_distr = "0.4.3"
nalgebra = "0.31.4"
ndarray = "0.15.6"
num = "0.4.0"
glam = "0.22.0"
once_cell = "1.17.0"
confy = "0.5.1"
itertools = "0.10.5"
cached = "0.42.0"
rfd = "0.10.0"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"]}
proc-macro2 = "1.0.49"
