
[package]
name = "genesis_game"
authors = ["Ben Askew-Gale <bengale2007@googlemail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/BenGale93/genesis"
readme = "../../README.md"

[dependencies]
genesis_lib = {workspace= true}
bevy = {workspace= true}
bevy_egui = {workspace= true}
bevy_rapier2d = {workspace = true}
bevy_screen_diagnostics = {workspace = true}
