[package]
name = "genesis-lib"
authors = ["Ben Askew-Gale <bengale2007@googlemail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
genesis-brain = { path = "../genesis-brain" }
genesis-genome = { path = "../genesis-genome" }
genesis-util = { path = "../genesis-util/"}
bevy = { version = "0.9.1", features = [] }
rand = "0.8.5"
thiserror = "1.0.37"
derive_more = "0.99.17"
bevy_rapier2d = {version = "0.19.0", features = ["debug-render"]}
anyhow = "1.0.66"
once_cell = "1.16.0"
confy = "0.5.1"
serde_derive = "1.0.147"
serde = "1.0.149"
bevy_egui = "0.17.1"
derive-getters = "0.2.0"
serde_json = "1.0.89"
rand_distr = "0.4.3"
iyes_loopless = {version="0.9.1", features = ["fixedtimestep"]}
itertools = "0.10.5"

[dev-dependencies]
