[package]
name = "genesis-lib"
authors = ["Ben Askew-Gale <bengale2007@googlemail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
genesis-brain = { path = "../genesis-brain" }
genesis-genome = { path = "../genesis-genome" }
genesis-util = { path = "../genesis-util/"}
spawners = { path = "../spawners" }
bevy = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
bevy_rapier2d = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true}
confy = { workspace = true}
serde_derive = { workspace = true}
serde = { workspace = true}
bevy_egui = { workspace = true}
derive-getters = { workspace = true}
serde_json = { workspace = true}
rand_distr = { workspace = true}
iyes_loopless = { workspace = true}
itertools = { workspace = true }

[dev-dependencies]
