[package]
authors = ["Ben Askew-Gale <bengale2007@googlemail.com>"]
name = "genesis-util"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rand = {workspace = true}
thiserror = {workspace = true}
nalgebra = {workspace = true}
glam = {workspace = true}
ndarray = {workspace = true}
num = {workspace = true}
