[package]
authors = ["Ben Askew-Gale <bengale2007@googlemail.com>"]
name = "genesis_attributes"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
genesis_newtype = {workspace = true}
genesis_genome = {workspace = true}
genesis_maths = {workspace = true}
genesis_config = {workspace = true}
bevy_ecs = {workspace = true}
derive_more = {workspace = true}
