[package]
authors = ["Ben Askew-Gale <bengale2007@googlemail.com>"]
name = "genesis_attributes"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
genesis_newtype = {workspace = true}
genesis_config = {workspace = true}
genesis_traits = {workspace = true}
genesis_derive = {workspace = true}
bevy_ecs = {workspace = true}
bevy_app = {workspace = true}
bevy_reflect = {workspace = true}
bevy-trait-query = { workspace = true }
derive_more = {workspace = true}
rand = { workspace = true }
ndarray = { workspace = true}
serde_derive = { workspace = true}
serde = { workspace = true}
thiserror = { workspace = true }
