[package]
authors = ["Ben Askew-Gale <bengale2007@googlemail.com>"]
name = "genesis_body"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
genesis_newtype = {workspace = true}
genesis_genome = {workspace = true}
genesis_ecosystem = {workspace = true}
genesis_config = {workspace = true}
bevy = {workspace = true}
bevy_rapier2d = {workspace = true}
anyhow = {workspace = true}
derive_more = {workspace = true}
rand = {workspace = true}
