[package]
authors = ["Ben Askew-Gale <bengale2007@googlemail.com>"]
name = "genesis_brain"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
genesis_newtype = { workspace = true }
genesis_maths = { workspace = true }
genesis_config = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }
cached = { workspace = true }
derive-getters = { workspace = true}
