[package]
authors = ["Ben Askew-Gale <bengale2007@googlemail.com>"]
name = "genesis_components"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
genesis_newtype = { workspace = true }
genesis_brain = { workspace = true }
genesis_maths = { workspace = true }
genesis_config = { workspace = true }
genesis_color = { workspace = true }
genesis_ecosystem = { workspace = true }
genesis_derive = { workspace = true }
genesis_traits = { workspace = true }
genesis_attributes = { workspace = true }
bevy_ecs = { workspace = true }
bevy_app = {workspace = true}
bevy_time = { workspace = true }
bevy_reflect = {workspace = true}
bevy_render = { workspace = true }
bevy_egui = { workspace = true }
bevy-trait-query = { workspace = true }
anyhow = {workspace = true}
derive_more = { workspace = true }
derive-getters = { workspace = true }
itertools = { workspace = true }
serde_derive = { workspace = true}
serde = { workspace = true}
rand = {workspace = true}
glam = {workspace = true}
thiserror = { workspace = true }
