[package]
name = "genesis_config"
authors = ["Ben Askew-Gale <bengale2007@googlemail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bevy_render = { workspace = true }
bevy_core_pipeline = { workspace = true }
once_cell = { workspace = true}
serde_derive = { workspace = true}
confy = { workspace = true}
serde = { workspace = true}
