[package]
name = "genesis_ecosystem"
authors = ["Ben Askew-Gale <bengale2007@googlemail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
genesis_config = { workspace = true }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
bevy_reflect = {workspace = true}
bevy_rapier2d = { workspace = true }
derive_more = { workspace = true}
anyhow = { workspace = true }
glam = {workspace = true}
