[package]
name = "genesis_lib"
authors = ["Ben Askew-Gale <bengale2007@googlemail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
genesis_brain = { path = "../genesis_brain" }
genesis_genome = { path = "../genesis_genome" }
genesis_newtype = { path = "../genesis_newtype/"}
genesis_color = { path = "../genesis_color/"}
genesis_maths = {path = "../genesis_maths/"}
genesis_spawners = { path = "../genesis_spawners" }
genesis_config = { path = "../genesis_config" }
genesis_ecosystem = { path = "../genesis_ecosystem" }
genesis_attributes = { path = "../genesis_attributes" }
genesis_body = { path = "../genesis_body" }
bevy = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
bevy_rapier2d = { workspace = true }
anyhow = { workspace = true }
serde_derive = { workspace = true}
serde = { workspace = true}
bevy_egui = { workspace = true}
derive-getters = { workspace = true}
serde_json = { workspace = true}
rand_distr = { workspace = true}
iyes_loopless = { workspace = true}
itertools = { workspace = true }

[dev-dependencies]
